--- a/CSS/mystyle.css
+++ b/CSS/mystyle.css
@@ -6,4 +6,17 @@ body{
 }
 h1{
     border: 1px dotted blue;
+    color: green;
+    margin-top: 100px;
+    margin-bottom: 150px;
+    margin-left: 80px;
+    margin-right: 170px;
+}
+p{
+    margin: 20px 50px 80px 80px;
+}
+.german{
+    width: 300px;
+    margin:auto;
+    border:1px solid red;
 }
