--- a/CSS/mystyle.css
+++ b/CSS/mystyle.css
@@ -11,6 +11,7 @@ h1{
     margin-bottom: 150px;
     margin-left: 80px;
     margin-right: 170px;
+    padding: 20px 20px;
 }
 p{
     margin: 20px 50px 80px 80px;
@@ -18,5 +19,7 @@ p{
 .german{
     width: 300px;
     margin:auto;
+    padding: 10px;
     border:1px solid red;
+    box-sizing: border-box;
 }
