--- a/CSS/mytable.css
+++ b/CSS/mytable.css
@@ -1,5 +1,6 @@
 #customer{
-    width:50%;    
+    width:50%; 
+    margin:auto;   
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     border-collapse: collapse;
     border: 1px solid black;
@@ -20,4 +21,29 @@
     text-align: left;
     padding-top: 12px;
     padding-bottom: 12px;
+}
+ul{    
+    list-style-type: none;
+    background-color: #333;
+    margin: 0;
+    margin-bottom: 30px;
+    padding: 0;
+    overflow: hidden;
+}
+li{
+    float: left;    
+}
+li a{
+    display: inline-block;
+    color:white;
+    padding: 14px 16px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 1.5em;
+}
+li a:hover{
+    background-color: black;
+}
+.active{
+    background-color: red;
 }
