--- a/CSS/mytable.css
+++ b/CSS/mytable.css
@@ -47,3 +47,9 @@ li a:hover{
 .active{
     background-color: red;
 }
+img{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 1em;
+}
