--- a/CSS/verticalmenu.css
+++ b/CSS/verticalmenu.css
@@ -1,6 +1,14 @@
+.vertical{
+    width: 100%;
+    height: 2.5em;
+    position:fixed;
+    top:0;
+    right:0; 
+    margin:0;
+    padding: 0;    
+}
 #menu a{
-    text-decoration: none;
-    /*--background-color: black;*/
+    text-decoration: none;    
     color:white;
     padding: 18px 18px;
     font-size: 2em;
@@ -17,15 +25,13 @@
 #menu {
     list-style-type: none;
     display: inline-block;
+    height: 100%;
     background-color: #333;
-    width: 100%;
-    margin-bottom: 30px;
-    margin: 0;
-    padding: 5px;
+    width: 100%;    
+    margin: 0;    
+    padding: 0;
     overflow: hidden;
-    position:fixed;
-    top:0;
-    right:0;
+       
 }
 #menu .active{
     background-color: red;
